2005-05-20 Kunihiro Ishiguro  <kunihiro@ipinfusion.com>

	* bgp_debug.c: Cosmetical fixes and log neighbor changes.

2004-05-20  Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_ecommunity.c: Transit ecommunity support.
	* bgp_ecommunity.c: Fix for unknown community crush.

2005-05-20 Kunihiro Ishiguro  <kunihiro@ipinfusion.com>

	* *: Maximum prefix threshold support.
	* *: Reset notification fixups.

2004-05-08 Paul Jakma <paul@dishone.st>

	* bgp_zebra.c: (bgp_interface_address_add) sync to zclient changes
	  (bgp_interface_address_delete) ditto.
	  (bgp_zebra_announce) ditto.
	  (bgp_zebra_withdraw) ditto.

2004-05-03 Daniel Roesen <dr@cluenet.de>
	
	* bgp_fsm.c: (bgp_stop) Reset uptime only on transition from 
	  Established so that it reflects true downtime (rather time 
	  since last transition, eg Active->Idle)
	  
2004-05-01 rivo nurges <rix@estpak.ee>
 
        * bgp_route.c: fix UNH IOL BGP-4.1.12f
 
2004-05-01 Paul Jakma <paul@dishone.st>

	* Revert the attempted clean-up of the dummy peer hack, reverts
	  patchsets 435 (see 2004-02-17 below) and 456. 

2004-04-16 rivo nurges <rix@estpak.ee>

	* bgpd.h, bgp_debug.c: update cease subcodes to
	  draft-ietf-idr-cease-subcode-05
	* bgpd.h, bgpd.c, bgp_route.c, bgp_route.h: fix UNH IOL BGP-4.1.6a

2004-02-17 Paul Jakma <paul@dishone.st>

	* bgpd.h: (bgp_peer) add fd_local and fd_accept 
	  file descriptor's, fd becomes a pointer to one of these.
	* bgpd.c: (global) adjust for fact that fd is now a pointer.
	  (peer_create_accept) removed.
	* bgp_route.c: (global) adjust for change of peer fd to pointer
	* bgp_packet.c: (bgp_collision_detect) adjust and remove the 
	  "replace with other peer" hack. 
	* bgp_network.c: (bgp_accept) Remove the dummy peer hack. 
	  Update peer->fd_accept instead. 
	  (global) Adjust fd references - now a pointer.
	* bgp_fsm.c: (global) adjust peer fd to pointer.
	  (bgp_connection_stop) new function, to stop connection.
	  (global) adjust everything which closed peer fd to use